--- a/src/app/home-router/dota/dota.component.html
+++ b/src/app/home-router/dota/dota.component.html
@@ -1,8 +1,8 @@
 <div class="blocktest">
     <div [ngClass]="router.url === '/dota' ? 'imageCSnoA' : 'imageCS'" class="blur"  alt="dota2 | Eesports">
-        <p *ngIf="router.url === '/dota'" class="btn btn-dark movebtn" routerLink="">Go back</p>
         <div *ngIf="router.url === '/dota'" class="content">
             
         </div>
     </div>
-</div> 
+</div>
+<app-footer></app-footer>
