--- a/src/app/home-router/csgo/cs-results/cs-results.component.html
+++ b/src/app/home-router/csgo/cs-results/cs-results.component.html
@@ -3,17 +3,12 @@
         <div class="content">
             <div class="row justify-content-md-center">
                 <div class="col-md-12 col-sm-12">
-
                     <table style="margin-top:10%;" class="table  table-hover table-dark text-center">
                         <thead>
                             <tr class="text-center">
-
                                 <th scope="col" colspan="7" style="color: #80aad4;">Recent matches</th>
-
-
                             </tr>
                         </thead>
-
                         <tbody>
                             <tr *ngFor="let post of _postArrayResults | paginate: { itemsPerPage: 10, currentPage: p } " (click)="selectId(post.id)" style="cursor: pointer;">
                                 <td class="name-align">
@@ -23,31 +18,24 @@
                                         </div>
                                         
                                 </td>
-                               
                                 <td class="resultScore">
                                         <!-- <span  [ngStyle]="{'color':post.result |  >= 16 ? 'green' : 'red'}">{{post.result | slice:0:2}}</span> -->
                                     <span  [ngStyle]="">{{post.result | slice:0:2}}</span> -
                                     <span  [ngStyle]="">{{post.result | slice:4:7}}</span>
                                 </td>
-
                                 <td class="name-align">
                                         <div class="items-align team2">
                                             <img src="https://static.hltv.org/images/team/logo/{{post.team2.id}}" width="35px" height="35px" alt="{{post.team2.name}}">
                                             <div class="textShrink">{{post.team2.name}}</div>
                                         </div>
                                 </td>
-
                                 <td class="textShrink">
                                     <span>{{post.event.name}}</span>
                                 </td>
                                 <input id="matchId" type="hidden" value="{{post.id}}">
                             </tr>
-
                         </tbody>
-
-
                     </table>
-
                 </div>
             </div>
             <div class="row justify-content-md-center">
@@ -55,11 +43,8 @@
                     <pagination-controls class="my-pagination" maxSize="3" (pageChange)="p = $event"></pagination-controls>
                 </div>
             </div>
-
-
-
-
         </div>
         <!--CONtENT-->
     </div>
 </div>
+<app-footer></app-footer>
