--- a/src/app/home-router/csgo/match/match.component.html
+++ b/src/app/home-router/csgo/match/match.component.html
@@ -35,3 +35,5 @@
    Map3: {{ _postArrayMatch.maps[2].name}}
     <Br>
    result3: {{ _postArrayMatch.maps[2].result}}
+
+   <app-footer></app-footer>
