--- a/src/app/home-router/csgo/match/match.component.html
+++ b/src/app/home-router/csgo/match/match.component.html
@@ -1,61 +1,219 @@
 <div class="container-fluid">
-  
 
-   <!--  <div class="col-md-12"> -->
-        <div class="box-holder">
-            <div class="row">
-          <div class="col-4 align-items">
-          <img src="https://static.hltv.org/images/team/logo/{{ _postArrayMatch.team1.id}}" height="100" width="100" class="logo" alt="{{ _postArrayMatch.team1.name}}">
-          <p>{{ _postArrayMatch.team1.name }}</p> 
+
+  <!--  <div class="col-md-12"> -->
+  <div class="box-holder">
+    <div class="row">
+      <div class="col-md-4 col-xs-12 align-items">
+        <img src="https://static.hltv.org/images/team/logo/{{ _postArrayMatch.team1.id}}" height="100" width="100" class="logo" alt="{{ _postArrayMatch.team1.name}}">
+        <p>{{ _postArrayMatch.team1.name }}</p>
+
+        <div *ngIf="_postArrayMatch.team1.name != _postArrayMatch.winnerTeam.name && _postArrayMatch.format != 'Best of 3'">
+          <p style="color:red;">0</p>
+        </div>
+        <div *ngIf="_postArrayMatch.team1.name == _postArrayMatch.winnerTeam.name  && _postArrayMatch.format == 'Best of 1' || _postArrayMatch.team1.name == _postArrayMatch.winnerTeam.name  && _postArrayMatch.format == 'Best of 1 (Online)'">
+          <p style="color:green;">1</p>
+        </div>
+
+
+        <div *ngIf="_postArrayMatch.team1.name == _postArrayMatch.winnerTeam.name && _postArrayMatch.format == 'Best of 3'">
+          <p style="color:green;">WIN</p>
+        </div>
+        <div *ngIf="_postArrayMatch.team1.name != _postArrayMatch.winnerTeam.name && _postArrayMatch.format == 'Best of 3'">
+          <p style="color:red;">LOSE</p>
+        </div>
+
+        <!--   <div *ngIf="_postArrayMatch.maps[0].result|slice:0:2 > _postArrayMatch.maps[0].result|slice:3:5 && _postArrayMatch.format == 'Best of 3'">
+          <p style="color:red">1</p>
+        </div> -->
+
+      </div>
+
+      <div class="col-md-4 col-xs-12 align-items">
+        <h4 style="color: #0ca2cf;">{{ _postArrayMatch.event.name }}</h4>
+        <p style="font-size:11px;">{{ _postArrayMatch.date | date:mediumDate }}
+          <Br> {{ _postArrayMatch.date | date:'shortTime' }}</p>
+        <p>{{ _postArrayMatch.format }}</p>
+        <p *ngIf="_postArrayMatch.live == false">Match over</p>
+        <p *ngIf="_postArrayMatch.live == true">Live</p>
+      </div>
+
+      <div class="col-md-4 col-xs-12 align-items">
+        <img src="https://static.hltv.org/images/team/logo/{{ _postArrayMatch.team2.id}}" height="100" width="100" class="logo" alt="{{ _postArrayMatch.team2.name}}">
+        <p>{{ _postArrayMatch.team2.name}}</p>
+
+
+
+        <div *ngIf="_postArrayMatch.team2.name != _postArrayMatch.winnerTeam.name && _postArrayMatch.format != 'Best of 3'">
+          <p style="color:red;">0</p>
+        </div>
+        <div *ngIf="_postArrayMatch.team2.name == _postArrayMatch.winnerTeam.name  && _postArrayMatch.format == 'Best of 1' || _postArrayMatch.team2.name == _postArrayMatch.winnerTeam.name  && _postArrayMatch.format == 'Best of 1 (Online)'">
+          <p style="color:green;">1</p>
+        </div>
+
+
+
+        <div *ngIf="_postArrayMatch.team2.name == _postArrayMatch.winnerTeam.name && _postArrayMatch.format == 'Best of 3'">
+          <p style="color:green;">WIN</p>
+        </div>
+        <div *ngIf="_postArrayMatch.team2.name != _postArrayMatch.winnerTeam.name && _postArrayMatch.format == 'Best of 3'">
+          <p style="color:red;">LOSE</p>
+        </div>
+
+      </div>
+
+    </div>
+    <!-- </div> -->
+  </div>
+
+
+  <br>
+
+
+  <div class="box-holder">
+    <div class="row align-maps">
+      <div *ngFor="let map of _postArrayMatch.maps" [ngSwitch]="map.name">
+
+        <div class="col-md-12" *ngSwitchCase="'inf'">
+          <div class="card text-white bg-dark mb-3 d-inline-block">
+            <div class="card-body"> Inferno </div>
+            <img [ngClass]="{mapNotplayed:map.result === ''}" src="../../../../assets/csgo_maps/inferno.jpg" alt="Inferno" height="100px"
+              width="290px">
+            <p class="resultInfo">{{ map.result }}</p>
           </div>
 
-          <div class="col-4 align-items">
-            <h4 style="color: #0ca2cf;">{{ _postArrayMatch.event.name }}</h4>
-            <p>{{ _postArrayMatch.format }}</p>
-            <p>{{ _postArrayMatch.date | date:mediumDate }}</p>
-            <p>{{ _postArrayMatch.date | date:'shortTime' }}</p>
-            <p *ngIf="_postArrayMatch.live == false">Match over</p>
-            <p *ngIf="_postArrayMatch.live == true">Live</p>
-          </div>
-         
-          <div class="col-4 align-items">
-              <img src="https://static.hltv.org/images/team/logo/{{ _postArrayMatch.team2.id}}" height="100" width="100" class="logo" alt="{{ _postArrayMatch.team2.name}}">
-              <p>{{ _postArrayMatch.team2.name}}</p> 
+        </div>
+
+
+
+        <div class="col-md-12" *ngSwitchCase="'nuke'">
+          <div class="card text-white bg-dark mb-3 d-inline-block">
+            <div class="card-body"> Nuke </div>
+            <img [ngClass]="{mapNotplayed:map.result === ''}" src="../../../../assets/csgo_maps/nuke.jpg" alt="Nuke" height="100px" width="290px">
+            <p class="resultInfo">{{ map.result }}</p>
           </div>
 
+        </div>
+
+
+
+        <div class="col-md-12" *ngSwitchCase="'cch'">
+          <div class="card text-white bg-dark mb-3 d-inline-block">
+            <div class="card-body"> Cache </div>
+            <img [ngClass]="{mapNotplayed:map.result === ''}" src="../../../../assets/csgo_maps/cache.png" alt="Cache" height="100px"
+              width="290px">
+            <p class="resultInfo">{{ map.result }}</p>
           </div>
-        <!-- </div> -->
+
+        </div>
+
+
+
+        <div class="col-md-12" *ngSwitchCase="'mrg'">
+          <div class="card text-white bg-dark mb-3 d-inline-block">
+            <div class="card-body"> Mirage </div>
+            <img [ngClass]="{mapNotplayed:map.result === ''}" src="../../../../assets/csgo_maps/mirage.png" alt="Mirage" height="100px"
+              width="290px">
+            <p class="resultInfo">{{ map.result }}</p>
+          </div>
+
+        </div>
+
+
+        <div class="col-md-12" *ngSwitchCase="'ovp'">
+          <div class="card text-white bg-dark mb-3 d-inline-block">
+            <div class="card-body"> Overpass </div>
+            <img [ngClass]="{mapNotplayed:map.result === ''}" src="../../../../assets/csgo_maps/overpass.png" alt="Overpass" height="100px"
+              width="290px">
+            <p class="resultInfo">{{ map.result }}</p>
+          </div>
+
+        </div>
+
+
+
+        <div class="col-md-12" *ngSwitchCase="'d2'">
+          <div class="card text-white bg-dark mb-3 d-inline-block">
+            <div class="card-body"> Dust2 </div>
+            <img [ngClass]="{mapNotplayed:map.result === ''}" src="../../../../assets/csgo_maps/dust2.png" alt="Dust2" height="100px"
+              width="290px">
+            <p class="resultInfo">{{ map.result }}</p>
+          </div>
+
+        </div>
+
+
+        <div class="col-md-12" *ngSwitchCase="'trn'">
+          <div class="card text-white bg-dark mb-3 d-inline-block">
+            <div class="card-body"> Train </div>
+            <img [ngClass]="{mapNotplayed:map.result === ''}" src="../../../../assets/csgo_maps/train.png" alt="Train" height="100px"
+              width="290px">
+            <p class="resultInfo">{{ map.result }}</p>
+          </div>
+
+        </div>
+
+
+
+      </div>
+    </div>
+    <!-- row -->
+  </div>
+  <!-- box holder -->
+
+    <div class="headline">
+        <p style="margin-top: 1.4%;
+        font-size: 24px;">Lineups</p>
+      </div>
+
+      <div class="box-holder-lineup">
+          
+        <div class="row players">
+        <div class="col-md-2 moveCenter" *ngFor="let playerTM1 of _postArrayMatch.players.team1">
+          <img class="border" src="https://static.hltv.org/images/playerprofile/thumb/{{playerTM1.id}}/400.jpeg?v=4" height="100px" width="100px;">
+          <p class="playerName">{{playerTM1.name}}</p>
+        </div>
+        <img style="margin-right: 5%;
+        margin-top: 3%;" src="https://static.hltv.org/images/team/logo/{{ _postArrayMatch.team1.id}}" height="70" width="70" class="logo" alt="{{ _postArrayMatch.team1.name}}">
+      </div>
     </div>
 
-    <br><br>
-          
-      <ul *ngFor="let map of _postArrayMatch.maps" [ngSwitch]="map.name">
-        <li *ngSwitchCase="'inf'">
-          <div>Inferno</div>
-          <img src="../../../../assets/csgo_maps/inferno.jpg"> {{ map.result }}
-        </li>
-        <li *ngSwitchCase="'nuke'">
-          <img src="../../../../assets/csgo_maps/nuke.jpg"> {{ map.result }}
-        </li>
-        <li *ngSwitchCase="'cch'">
-          <img src="../../../../assets/csgo_maps/cache.png"> {{ map.result }}
-        </li>
-        <li *ngSwitchCase="'mrg'">
-          <div>Mirage</div>
-          <img src="../../../../assets/csgo_maps/mirage.png"> {{ map.result }}
-        </li>
-        <li *ngSwitchCase="'ovp'">
-          <img src="../../../../assets/csgo_maps/overpass.png"> {{ map.result }}
-        </li>
-        <li *ngSwitchCase="'trn'">
-          <img src="../../../../assets/csgo_maps/train.png"> {{ map.result }}
-        </li>
-        <li *ngSwitchCase="'d2'">
-          <img src="../../../../assets/csgo_maps/dust2.png"> {{ map.result }}
-        </li>
-      
-      
-      </ul>
+<div class="box-holder-lineup">
+      <div class="row players">
+          <div class="col-md-2 moveCenter" *ngFor="let playerTM2 of _postArrayMatch.players.team2">
+            <img class="border" src="https://static.hltv.org/images/playerprofile/thumb/{{playerTM2.id}}/400.jpeg?v=4" alt="{{playerTM2.name}}" height="100px" width="100px;">
+            <p class="playerName">{{playerTM2.name}}</p>
+          </div>
+          <img style="margin-right: 5%;
+          margin-top: 3%;" src="https://static.hltv.org/images/team/logo/{{ _postArrayMatch.team2.id}}" height="70" width="70" class="logo" alt="{{ _postArrayMatch.team2.name}}">
+        </div>
+
+      </div>
+
+    <div class="headline" *ngIf="_postArrayMatch.highlights != ''">
+      <p style="margin-top: -3.6%;
+      font-size: 24px;">Highlights</p>
+    </div>
+
+
+  <div class="holder">
+     <div class="row">
+    <div class="col-md-2" *ngFor="let highlight of _postArrayMatch.highlights">
+        <a style="color:white" href={{highlight.link}} target="_blank">
+      <div class="highlight-box" >
+      <p style="font-size: 12px;">
+        {{highlight.title}}
+      </p>
+    </div>
+    </a>
+    </div>
 
   </div>
-   <app-footer></app-footer>
+
+  </div>
+
+</div>
+
+<div style="margin-top:5;"></div>
+
+<app-footer></app-footer>
