--- a/src/app/home-router/csgo/team-page/team-page.component.css
+++ b/src/app/home-router/csgo/team-page/team-page.component.css
@@ -61,13 +61,13 @@
     background-position: 0px -159px;
 }
 .coverImage1{
-    background-color: #4286f4;
+    background-color: #3f4042;
     width: 100%;
-    padding-top: 20.88235294%;
+    padding-top: 20.882353%;
     background-repeat: no-repeat;
     background-size: cover;
     opacity: .8;
-    position:absolute;
-    margin-left: 1.33%;
-    background-position: 0px -159px;
+    position: absolute;
+    margin-left: 1.17%;
+    background-position: 0px -164px;
 }
