--- a/src/app/home-router/csgo/team-page/team-page.component.html
+++ b/src/app/home-router/csgo/team-page/team-page.component.html
@@ -29,7 +29,7 @@
                 <img id="player" style="width: 14.4vw;" src="https://static.hltv.org//images/playerprofile/bodyshot/compressed/{{post.id}}.png">
               </div>
               <div class="col">
-                <p style="text-align: center; color:black;">
+                <p style="text-align: center; color:white">
                   {{post.name}}
                 </p>
               </div>
