--- a/src/app/home-router/csgo/cs-results/cs-results.component.html
+++ b/src/app/home-router/csgo/cs-results/cs-results.component.html
@@ -3,7 +3,7 @@
         <div class="content">
             <div class="row justify-content-md-center">
                 <div class="col-md-12 col-sm-12">
-                    <table style="margin-top:10%;" class="table  table-hover table-dark text-center">
+                    <table class="table  table-hover table-dark text-center">
                         <thead>
                             <tr class="text-center">
                                 <th scope="col" colspan="7" style="color: #80aad4;">Recent matches</th>
