--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,56 @@ router-outlet ~ * {
   position: absolute;
 }
 
+.sideNav{
+  background-color: #343a40;
+  width: 8%;
+  position: absolute;
+  z-index: 1;
+  min-height: 100%;
+  height: auto;
+  border-top-style: solid;
+  border-width: 1px;
+  border-top-color: #2f2e2e;
+}
+
+.sideNavRight{
+  background-color: #343a40;
+  width: 8%;
+  position: absolute;
+  z-index: 1;
+  min-height: 100%;
+  right:0%;
+  border-top-style: solid;
+  border-width: 1px;
+  border-top-color: #2f2e2e;
+}
+
+.sideBox{
+  width: 100%;
+  height: 15vh;
+  margin-top: -1%;
+  background-color: #343a40;
+  border-top-style: solid;
+  border-width: 1px;
+  border-top-color: #2f2e2e;
+  transition: 200ms;
+}
+
+.sideBoxclick{
+  height: 14vh;
+  margin-top: -9vh;
+}
+
+.centerIt{
+    text-align: center;
+    margin-top: 20%;
+}
+
+.sideBox:hover{
+background-color:#495158;
+transition: 200ms;
+}
+
 .blocktest{
   width:100%;
   height:100%;
