almost done with teampage

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -31,6 +31,8 @@
             <a class="nav-item nav-link" *ngIf="router.url === '/csgo'" routerLink="csgo/results">Results</a>
             <a class="nav-item nav-link" *ngIf="router.url === '/csgo/results'" routerLink="csgo/results">Results</a>
             <a class="nav-item nav-link" *ngIf="router.url === '/csgo/results'" routerLink="csgo/ranking">World Ranking</a>
+            <a class="nav-item nav-link" *ngIf="router.url === '/csgo/match/${id}'" routerLink="csgo/match/${id}">Results</a>
+            <a class="nav-item nav-link" *ngIf="router.url === '/csgo/match/${id}'" routerLink="csgo/match/">World Ranking</a>
             <a class="nav-item nav-link" *ngIf="router.url === '/csgo'" routerLink="csgo/ranking">World Ranking</a>
             <a class="nav-item nav-link" *ngIf="router.url === '/csgo/ranking'" routerLink="csgo/results">Results</a>
             <a class="nav-item nav-link" *ngIf="router.url === '/csgo/ranking'" routerLink="csgo/ranking">World Ranking</a>
