--- a/src/app/home-router/csgo/cs-results/cs-results.component.html
+++ b/src/app/home-router/csgo/cs-results/cs-results.component.html
@@ -1,5 +1,5 @@
 <div class="blocktest">
-    <div class="blur imageCSnoA" alt="cs:go | Eesports">
+    <div class="imageCSnoA" alt="cs:go | Eesports">
         <div class="content">
             <div class="row justify-content-md-center">
                 <div class="col-md-12 col-sm-12">
